--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="navbar">
       <div class="logo">
-        <img src="logo.png" alt="Prime Barber Logo">
+        <img src="logo.jpg" alt="Prime Barber Logo">
       </div>
       <nav>
         <a href="#services">Serviços</a>
@@ -34,37 +34,32 @@
   <section class="precos" id="services">
     <h2>Tabela de Serviços</h2>
     <table class="tabela">
-     <!-- TABELA DE SERVIÇOS -->
+      <tr><th>Serviço</th><th></th><th>Agendar</th></tr>
+      <tr><td>Social</td><td></td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Gostaria%20de%20agendar%20um%20Social." target="_blank">WhatsApp</a></td></tr>
+      <tr><td>Degradê</td><td></td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Gostaria%20de%20agendar%20um%20Degradê." target="_blank">WhatsApp</a></td></tr>
+      <tr><td>Degradê Navalhado</td><td></td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Gostaria%20de%20agendar%20um%20Degradê%20Navalhado." target="_blank">WhatsApp</a></td></tr>
+      <tr><td>Cantos</td><td></td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Gostaria%20de%20agendar%20um%20Cantos." target="_blank">WhatsApp</a></td></tr>
+      <tr><td>Barba</td><td></td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Gostaria%20de%20agendar%20uma%20Barba." target="_blank">WhatsApp</a></td></tr>
+      <tr><td>Sobrancelha</td><td></td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Gostaria%20de%20agendar%20uma%20Sobrancelha." target="_blank">WhatsApp</a></td></tr>
+      <tr><td>Pigmentação</td><td></td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Gostaria%20de%20agendar%20uma%20Pigmentação." target="_blank">WhatsApp</a></td></tr>
+      <tr><td>Nevou</td><td></td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Gostaria%20de%20agendar%20um%20Nevou." target="_blank">WhatsApp</a></td></tr>
+      <tr><td>Luzes</td><td></td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Gostaria%20de%20agendar%20um%20Luzes." target="_blank">WhatsApp</a></td></tr>
+      <tr><td>Reflexo Alinhado</td><td></td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Gostaria%20de%20agendar%20um%20Reflexo%20Alinhado." target="_blank">WhatsApp</a></td></tr>
+    </table>
+  </section>
 
-  <h2>Serviços</h2>
-  <table class="tabela">
-    <tr><th>Serviço</th><th>Preço</th><th>Agendar</th></tr>
-    <tr><td>Social</td><td>R$20,00</td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Gostaria%20de%20agendar%20um%20Social.%20Por%20favor,%20*digite%20seu%20nome%20e%20o%20horário%20desejado*." target="_blank">WhatsApp</a></td></tr>
-    <tr><td>Degradê</td><td>R$25,00</td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Gostaria%20de%20agendar%20um%20Degradê.%20Por%20favor,%20*digite%20seu%20nome%20e%20o%20horário%20desejado*." target="_blank">WhatsApp</a></td></tr>
-    <tr><td>Degradê Navalhado</td><td>R$30,00</td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Gostaria%20de%20agendar%20um%20Degradê%20Navalhado.%20Por%20favor,%20*digite%20seu%20nome%20e%20o%20horário%20desejado*." target="_blank">WhatsApp</a></td></tr>
-    <tr><td>Cantos</td><td>R$10,00</td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Gostaria%20de%20agendar%20um%20Cantos.%20Por%20favor,%20*digite%20seu%20nome%20e%20o%20horário%20desejado*." target="_blank">WhatsApp</a></td></tr>
-    <tr><td>Barba</td><td>R$20,00</td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Gostaria%20de%20agendar%20uma%20Barba.%20Por%20favor,%20*digite%20seu%20nome%20e%20o%20horário%20desejado*." target="_blank">WhatsApp</a></td></tr>
-    <tr><td>Sobrancelha</td><td>R$5,00</td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Gostaria%20de%20agendar%20uma%20Sobrancelha.%20Por%20favor,%20*digite%20seu%20nome%20e%20o%20horário%20desejado*." target="_blank">WhatsApp</a></td></tr>
-    <tr><td>Pigmentação</td><td>R$20,00</td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Gostaria%20de%20agendar%20uma%20Pigmentação.%20Por%20favor,%20*digite%20seu%20nome%20e%20o%20horário%20desejado*." target="_blank">WhatsApp</a></td></tr>
-    <tr><td>Nevou</td><td>R$55,00</td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Gostaria%20de%20agendar%20um%20Nevou.%20Por%20favor,%20*digite%20seu%20nome%20e%20o%20horário%20desejado*." target="_blank">WhatsApp</a></td></tr>
-    <tr><td>Luzes</td><td>R$35,00</td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Gostaria%20de%20agendar%20um%20Luzes.%20Por%20favor,%20*digite%20seu%20nome%20e%20o%20horário%20desejado*." target="_blank">WhatsApp</a></td></tr>
-    <tr><td>Reflexo Alinhado</td><td>R$45,00</td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Gostaria%20de%20agendar%20um%20Reflexo%20Alinhado.%20Por%20favor,%20*digite%20seu%20nome%20e%20o%20horário%20desejado*." target="_blank">WhatsApp</a></td></tr>
-  </table>
-</section>
-
-<!-- TABELA DE COMBOS -->
-<section class="precos" id="combos">
-  <h2>Combos Promocionais</h2>
-  <table class="tabela">
-    <tr><th>Combo</th><th>Preço</th><th>Agendar</th></tr>
-    <tr><td>Social + Barba + Sobrancelha</td><td>R$40,00</td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Quero%20agendar%20o%20combo%20Social%20+%20Barba%20+%20Sobrancelha.%20Por%20favor,%20*digite%20seu%20nome%20e%20o%20horário%20desejado*." target="_blank">WhatsApp</a></td></tr>
-    <tr><td>Degradê + Barba + Sobrancelha</td><td>R$45,00</td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Quero%20agendar%20o%20combo%20Degradê%20+%20Barba%20+%20Sobrancelha.%20Por%20favor,%20*digite%20seu%20nome%20e%20o%20horário%20desejado*." target="_blank">WhatsApp</a></td></tr>
-    <tr><td>Navalhado + Barba + Sobrancelha</td><td>R$50,00</td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Quero%20agendar%20o%20combo%20Navalhado%20+%20Barba%20+%20Sobrancelha.%20Por%20favor,%20*digite%20seu%20nome%20e%20o%20horário%20desejado*." target="_blank">WhatsApp</a></td></tr>
-    <tr><td>Corte + Pigmentação</td><td>R$40,00</td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Quero%20agendar%20o%20combo%20Corte%20+%20Pigmentação.%20Por%20favor,%20*digite%20seu%20nome%20e%20o%20horário%20desejado*." target="_blank">WhatsApp</a></td></tr>
-    <tr><td>Cantos + Barba</td><td>R$25,00</td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Quero%20agendar%20o%20combo%20Cantos%20+%20Barba.%20Por%20favor,%20*digite%20seu%20nome%20e%20o%20horário%20desejado*." target="_blank">WhatsApp</a></td></tr>
-  </table>
-</section>
-
+  <!-- TABELA DE COMBOS -->
+  <section class="precos" id="combos">
+    <h2>Combos Promocionais</h2>
+    <table class="tabela">
+      <tr><th>Combo</th><th></th><th>Agendar</th></tr>
+      <tr><td>Social + Barba + Sobrancelha</td><td></td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Quero%20agendar%20o%20combo%20Social%20+%20Barba%20+%20Sobrancelha." target="_blank">WhatsApp</a></td></tr>
+      <tr><td>Degradê + Barba + Sobrancelha</td><td></td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Quero%20agendar%20o%20combo%20Degradê%20+%20Barba%20+%20Sobrancelha." target="_blank">WhatsApp</a></td></tr>
+      <tr><td>Navalhado + Barba + Sobrancelha</td><td></td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Quero%20agendar%20o%20combo%20Navalhado%20+%20Barba%20+%20Sobrancelha." target="_blank">WhatsApp</a></td></tr>
+      <tr><td>Corte + Pigmentação</td><td></td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Quero%20agendar%20o%20combo%20Corte%20+%20Pigmentação." target="_blank">WhatsApp</a></td></tr>
+      <tr><td>Cantos + Barba</td><td></td><td><a class="whatsapp-btn" href="https://wa.me/5581991911425?text=Olá!%20Quero%20agendar%20o%20combo%20Cantos%20+%20Barba." target="_blank">WhatsApp</a></td></tr>
+    </table>
+  </section>
 
   <!-- FORM DE AGENDAMENTO -->
   <section class="contact" id="contact">
