--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   <!-- FOOTER -->
   <footer>
-    <p>© 2025 Prime Barber | Desenvolvido com 💈 estilo <a href="https://www.instagram.com/newksitesfss?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="> @newksitesfss</a></p>
+    <p>© 2025 Prime Barber | Desenvolvido com 💈 estilo <a href="https://www.instagram.com/cria.tech_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="> @cria.tech_</a></p>
   </footer>
 
   <script>
